tests/negative/parser/top_level.orng
// top_level.orng:5:4: error: expected top-level declaration here, got `123`
// 123
//   ^
// 
123